# laser-daq-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REQUIREMENTS.md  laser_daq.spec  pyproject.toml
docs/: CSV_FORMAT_V2.md
resources/sample_data/: sample_mixed.csv
scripts/: build.bat  build.sh
src/laser_daq/: __init__.py  __main__.py  constants.py  main.py
src/laser_daq/controllers/: __init__.py  annotation_controller.py  discovery_controller.py  export_controller.py  import_controller.py
src/laser_daq/models/: __init__.py  annotation.py  data_model.py  device_type.py
src/laser_daq/views/: __init__.py  annotation_panel.py  chart_view.py  device_tree.py  export_dialog.py  import_panel.py  main_window.py  preview_table.py  stats_panel.py
src/laser_daq/workers/: __init__.py  export_worker.py  import_worker.py
tests/: __init__.py  conftest.py  test_annotation.py  test_data_model.py  test_device_type.py  test_export_controller.py
